--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,11 +409,11 @@ h1:hover .anchor-link, h2:hover .anchor-link, h3:hover .anchor-link, h4:hover .a
 
 .search-result-highlight { color: #2e0137; font-weight: bold; }
 
-table { display: block !important; overflow-x: auto; white-space: nowrap; font-size: 75%; border: none; }
+table { display: block !important; overflow-x: auto; white-space: nowrap; font-size: 95%; border: none; }
 
 table th { text-align: center !important; }
 
-table td { text-overflow: ellipsis; overflow: hidden; max-width: 15em; }
+table td { text-overflow: ellipsis; overflow: hidden; }
 
 ::-webkit-scrollbar { width: 14px; height: 18px; }
 
@@ -477,5 +477,7 @@ table td { text-overflow: ellipsis; overflow: hidden; max-width: 15em; }
 .highlight .m, .highlight .mb, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .mo, .highlight .il { color: #bd93f9; }
 
 .highlight .gd { color: #ff5555; }
+
+#colab { padding: 0px 80px; }
 
 /*# sourceMappingURL=style.css.map */
