deploy: f7a7ae0a38b925ba2db44818b3942b9e83952a6f

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,4 +480,6 @@ table td { text-overflow: ellipsis; overflow: hidden; }
 
 #colab { padding: 0px 80px; }
 
+img.inline { display: inline; vertical-align: baseline; }
+
 /*# sourceMappingURL=style.css.map */
